<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        android:fontFamily="@font/pixelify_sans_bold"/>
    <item
        android:id="@+id/nav_workouts"
        android:title="@string/workouts"
        android:icon="@drawable/ic_workouts"
        android:fontFamily="@font/pixelify_sans_bold"/>
    <item
        android:id="@+id/nav_tips"
        android:title="@string/tips"
        android:icon="@drawable/ic_tips"
        android:fontFamily="@font/pixelify_sans_bold"/>
    <item
        android:id="@+id/nav_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        android:fontFamily="@font/pixelify_sans_bold"/>
</menu>
